Elastic/Extra/es_data.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es-data
  namespace: elastic
spec:
  replicas: 1
  selector:
    matchLabels:
      name: es-data
  template:
    metadata:
      labels:
        name: es-data
    spec:
      containers:
      - name: elasticsearch-data1
        image: docker.elastic.co/elasticsearch/elasticsearch:7.9.2
        volumeMounts:
        - name: elasticsearch-data
          mountPath: /usr/share/elasticsearch/data
        - name: config
          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          readOnly: true
          subPath: elasticsearch.yml
      volumes:
          ##### Requires setting permissions on host, for this to work
        # - name: elasticsearch-data
        #   hostPath:
        #     path: "/data/elasticsearch_data"
        - name: elasticsearch-data
          persistentVolumeClaim:
            claimName: elastic-pv-claim
        - name: config
          configMap:
            defaultMode: 0777
            name: es-data-config
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: "htz1"
