Elastic/Extra/logstash.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  namespace: elastic
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: logstash
  template:
    metadata:
      labels:
        name: logstash
    spec:
      containers:
      - name: logstash
        image: docker.elastic.co/logstash/logstash:7.14.1
        args: [
          "--config.reload.automatic"
        ]
        volumeMounts:
        - name: config
          mountPath: /usr/share/logstash/pipeline
        - name: logstash-yml
          mountPath: /usr/share/logstash/config/logstash.yml
          readOnly: true
          subPath: logstash.yml
        # - name: pipelines-yml
        #   mountPath: /usr/share/logstash/config
        #   # mountPath: /usr/share/logstash/config/pipelines.yml
        #   # subPath: pipelines.yml
      volumes:
      - name: logstash-yml
        configMap:
          defaultMode: 0666
          name: logstash-yml
      # - name: pipelines-yml
      #   configMap:
      #     defaultMode: 0666
      #     name: pipelines-yml
      #     items:
      #     - key: pipelines.yml
      #       path: pipelines.yml
      #     - key: logstash.yml
      #       path: logstash.yml
      - name: config
        configMap:
          name: logstash-config
          items:
          - key: logstash.conf
            path: logstash.conf
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: "worker"
