Elastic/Extra/apm-server.yml
# https://www.elastic.co/guide/en/apm-server/current/docker.html
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apm-server
  namespace: elastic
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: apm-server
  template:
    metadata:
      labels:
        name: apm-server
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 0
      containers:
      - name: apm-server
        image: docker.elastic.co/apm/apm-server:8.8.1
        volumeMounts:
        - name: config
          mountPath: /usr/share/apm-server/apm-server.yml
          readOnly: true
          subPath: apm-server.yml
        - name: elasticsearch-ca
          mountPath: /usr/share/apm-server/elasticsearch-ca.pem
          readOnly: true
          subPath: elasticsearch-ca.pem
      volumes:
      - name: config
        configMap:
          defaultMode: 0600
          name: apm-config
      - name: elasticsearch-ca
        secret:
          secretName: elasticsearch-ca
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: "htz1"
---
apiVersion: v1
kind: Service
metadata:
  name: apm-server
  namespace: elastic
  labels:
    name: apm-server
spec:
  ports:
    - name: http
      port: 8200
      targetPort: 8200
  selector:
    name: apm-server
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: apm-server
  namespace: elastic
spec:
  entryPoints:
    - https
  routes:
  - match: Host(`apm.rudenspavasaris.id.lv`)
    kind: Rule
    services:
    - name: apm-server
      port: 8200
  tls:
    certResolver: default
