Elastic/Extra/es_ingest.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es-ingest
  namespace: elastic
spec:
  replicas: 1
  selector:
    matchLabels:
      name: es-ingest
  template:
    metadata:
      labels:
        name: es-ingest
    spec:
      containers:
      - name: elasticsearch-ingest1
        image: docker.elastic.co/elasticsearch/elasticsearch:7.15.1
        volumeMounts:
        - name: config
          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          readOnly: true
          subPath: elasticsearch.yml
        - name: http-cert
          mountPath: /usr/share/elasticsearch/config/http.p12
          readOnly: true
          subPath: http.p12-es-ingest
      volumes:
      - name: config
        configMap:
          defaultMode: 0777
          name: es-ingest-config
      - name: http-cert
        secret:
          secretName: http-cert
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: "htz1"
---
apiVersion: v1
kind: Service
metadata:
  name: es-ingest
  namespace: elastic
spec:
  ports:
    - name: http
      port: 9200
      targetPort: 9200
      protocol: TCP
    - name: cluster-comms
      port: 9300
      targetPort: 9300
      protocol: TCP
  selector:
    name: es-ingest
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: es-ingest
  namespace: elastic
spec:
  entryPoints:
    - https
  routes:
  - match: Host(`esi.rudenspavasaris.id.lv`)
    kind: Rule
    services:
    - name: es-ingest
      port: 9200
      targetPort: 9200
  tls:
    certResolver: default
